# cuda-gemm-lab

./: .gitignore  CMakeLists.txt  README.md
src/: main.cu  wmma_benchmark.cu
